@@ -1,5 +1,6 @@
 v.0.3.1
 - updated common libraries (specifically logger)
+- changed import process for json and OrderedDict
 
 v.0.3.0
 - first public release
